PR10467 cont'd: be tolerant of bad line numbers

If a line number is invalid for a source file, that should not be a
fatal error, as it may still be valid for some other matching source
file.

* dwflpp.cxx (dwflpp::iterate_over_srcfile_lines): Don't assert that the
  line must be found, just break out quietly.